Bug 918223 - Make sure to save persdict.dat. r=ehsan, a=akeybl