extensions/spellcheck/src/mozPersonalDictionary.cpp
@@ -58,14 +58,15 @@ mozPersonalDictionary::~mozPersonalDictionary()
 
 nsresult mozPersonalDictionary::Init()
 {
-  nsresult rv;
-  nsCOMPtr<nsIObserverService> svc = 
-           do_GetService("@mozilla.org/observer-service;1", &rv);
-   
-  if (NS_SUCCEEDED(rv) && svc) 
-    rv = svc->AddObserver(this, "profile-do-change", true); // we want to reload the dictionary if the profile switches
+  nsCOMPtr<nsIObserverService> svc =
+    do_GetService("@mozilla.org/observer-service;1");
 
-  if (NS_FAILED(rv)) return rv;
+  NS_ENSURE_STATE(svc);
+  // we want to reload the dictionary if the profile switches
+  nsresult rv = svc->AddObserver(this, "profile-do-change", true);
+  NS_ENSURE_SUCCESS(rv, rv);
+  rv = svc->AddObserver(this, "profile-before-change", true);
+  NS_ENSURE_SUCCESS(rv, rv);
 
   Load();
   
@@ -256,6 +257,8 @@ NS_IMETHODIMP mozPersonalDictionary::Observe(nsISupports *aSubject, const char *
 {
   if (!nsCRT::strcmp(aTopic, "profile-do-change")) {
     Load();  // load automatically clears out the existing dictionary table
+  } else if (!nsCRT::strcmp(aTopic, "profile-before-change")) {
+    Save();
   }
 
   return NS_OK;
